--- a/UserEvents.html
+++ b/UserEvents.html
@@ -44,9 +44,6 @@ $mysql_password = "6doubles";
 				position: relative;
 				border-bottom:black solid;
 			}
-			.shadowArea div:hover{
-				background: #9D968F;
-			}
 			.shadowArea h3{
 				color:white;
 			}
@@ -100,40 +97,29 @@ $mysql_password = "6doubles";
 			<div id="roundup">
 				<img src="/images/roundup.jpg"/><h1>SPORTSMAN ROUNDUP</h1>
 				<br>
-				<span id="siteLinks"><?php if(!$_SESSION['username']){?><a href="SignUp.html">Sign Up</a><a href="SignIn.html">Sign In</a><?php }?><?php if($_SESSION['username']){?><a href="AddEvent.html">Add Event</a><a href="UserEvents.html">My Events</a><a href="signOut.php">Sign Out</a><?php }?></span>
+				<span id="siteLinks"><a href="Events.html">Events</a><a href="AddEvent.html">Add Event</a><a href="signOut.php">Sign Out</a></span>
 			</div>
 		</div>
 		<div id="content">
+			<div id="events" class="shadowArea">
 				<?php
 					$con = mysql_connect($mysql_host,$mysql_user,$mysql_password);
 					mysql_select_db($mysql_database,$con);
-					$query = "SELECT * FROM events WHERE Event_Date >='" . date('Y-m-d') . "' ORDER BY Event_Date";
+					$query = "SELECT * FROM events WHERE U_Id ='$_SESSION[userid]' ORDER BY Event_Date";
 					$result = mysql_query($query);
-					$curMonth = "January";
 					$beg = true;
 					while($row = mysql_fetch_array($result))
 					{
-						if($beg){
-							$beg = false;
-							echo '<div class="shadowArea">';
-							echo "<h3>$curMonth</h3>";
-						}
-						else if(date('F',strtotime($row[Event_Date]))!=$curMonth){
-							echo '</div><div class="shadowArea">';
-							$curMonth = date('F',strtotime($row[Event_Date]));
-							echo "<h3>$curMonth</h3>";
-						}
-						echo "<div onclick=\"location.href='http://$row[Event_Website]'\">
-						<span class=\"eventName\">$row[Event_Name]</span><br>
-						<span class=\"eventDate\">" . date('n/d/Y',strtotime($row[Event_Date])) . "</span><span class=\"eventTime\">$row[Event_Time]</span><br>
-						<span class=\"eventCityState\">$row[Event_City],$row[Event_State]</span>" . ((!empty($row[Event_Location]))?"<span class=\"eventLocation\">Location:$row[Event_Location]</span>":"") . 
-						"<br></div>";
+						$beg=false;
+						echo "<div><span class=\"eventName\">$row[Event_Name]</span><br><span class=\"eventDate\">" . date('n/d/Y',strtotime($row[Event_Date])) . "</span><span class=\"eventTime\">$row[Event_Time]</span><br><span class=\"eventCityState\">$row[Event_City],$row[Event_State]</span>" . ((!empty($row[Event_Location]))?"<span class=\"eventLocation\">Location:$row[Event_Location]</span>":"") . "<br></div>";
 					}
 					mysql_close($con);
-					if(!$beg){
-						echo "</div>";
+					if($beg){
+						echo "<p>You currently have no events listed</p>";
+						?><script>document.getElementById("events").style.textAlign="center";</script><?php
 					}
 				?>
+			</div>
 			<div id="footer">
 				<h6>2012 A Postmaster Production</h6>
 			</div>
