--- a/AddEvent.html
+++ b/AddEvent.html
@@ -14,9 +14,9 @@ if(!$_SESSION['username']){
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css" />
     	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
     	<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-    	<script src="jquery-ui-timepicker-addon.js"></script>
-    	<script src="jquery-ui-sliderAccess.js"></script>
-    	<link rel="stylesheet" href="jquery-ui-timepicker-addon.css"/>
+    	<script src="script/jquery-ui-timepicker-addon.js"></script>
+    	<script src="script/jquery-ui-sliderAccess.js"></script>
+    	<link rel="stylesheet" href="style/jquery-ui-timepicker-addon.css"/>
     	<script>
     		$(function() {
         		$( "#datepicker" ).datepicker({
@@ -197,7 +197,7 @@ if(!$_SESSION['username']){
 			<div id="roundup">
 				<img src="/images/roundup.jpg"/><h1>SPORTSMAN ROUNDUP</h1>
 				<br>
-				<span id="siteLinks"><a href="Events.html">Events</a><a href="UserEvents.html">My Events</a><a href="signOut.php">Sign Out</a></span>
+				<span id="siteLinks"><a href="Events.html">Events</a><a href="UserProfile.html">My Profile</a><a href="signOut.php">Sign Out</a></span>
 			</div>
 		</div>
 		<div id="content">
