--- a/SignIn.html
+++ b/SignIn.html
@@ -89,9 +89,11 @@ if($_SESSION['username']){
 				height:6.25em;
 			}
 			#userSignUp label{
+				margin-right: 1em;
 				display:inline-block;
-				width:7em;
+				width:5em;
 				font-size:1.25em;
+				text-align: right;
 			}
 			#enter{
 				width:50%;
@@ -182,9 +184,11 @@ if($_SESSION['username']){
 				<form name="user" action="signIn.php" method="POST">
 					<label>User Name</label><input name="userName"></br>
 					<label>Password</label><input name="userPassword" type="password"><br>
-					<input type="button" name="userSubmit" value="Sign In" onclick="validate()"><input type="button" name="userCancel" value="Cancel" onclick="location.href='Events.html'">
 				</form>
-			</div>
+				<div style="margin-left:1em;">
+					<input type="button" name="userSubmit" value="Sign In" onclick="validate()" style="margin-left:auto;"><input type="button" name="userCancel" value="Cancel" onclick="location.href='Events.html'">				
+				</div>
+			</div>			
 			<div id="footer">
 				<h6>2012 A Postmaster Production</h6>
 			</div>
