--- a/SignUp.html
+++ b/SignUp.html
@@ -93,9 +93,11 @@ if($_SESSION['username']){
 				height:6.25em;
 			}
 			#userSignUp label{
+				margin-right: 1em;
 				display:inline-block;
-				width:7em;
+				width:5em;
 				font-size:1.25em;
+				text-align: right;
 			}
 			#enter{
 				width:50%;
