--- a/SignUp.html
+++ b/SignUp.html
@@ -4,7 +4,7 @@ $mysql_host = "mysql5.000webhost.com";
 $mysql_database = "a3940063_roundup";
 $mysql_user = "a3940063_cloudy";
 $mysql_password = "6doubles";
-if($_SESSION['username']){
+if((isset($_SESSION['username']) && !empty($_SESSION['username'])){
 	header('Location: Events.html');
 }
 ?>
