--- a/AddEvent.html
+++ b/AddEvent.html
@@ -18,7 +18,7 @@ if(!(isset($_SESSION['username']) && !empty($_SESSION['username']))){
     	<script src="script/jquery-ui-sliderAccess.js"></script>
     	<link rel="stylesheet" href="style/jquery-ui-timepicker-addon.css"/>
     	<script>
-    		$(function() {
+    		$(document).ready(function() {
         		$( "#datepicker" ).datepicker({
             		//showOn: "button",
 		            //buttonImage: "/images/calendar-blue.GIF",
@@ -350,7 +350,7 @@ if(!(isset($_SESSION['username']) && !empty($_SESSION['username']))){
 							<label class="w10 inputselect" for="state">
 								<span class="wrapper">
 									<span class="title">State</span>
-									<select class="field" name="state">
+									<select class="field select" name="state">
 										<option value=""></option>
 										<?php
 											$con = mysql_connect($mysql_host,$mysql_user,$mysql_password);
