--- a/SignUp.html
+++ b/SignUp.html
@@ -54,7 +54,7 @@ if((isset($_SESSION['username']) && !empty($_SESSION['username'])){
     			}
 		}
 		</script>
-		<style>
+		<!-- <style>
 			#header{
 				width:100%;
 				margin:0 auto;
@@ -164,7 +164,7 @@ if((isset($_SESSION['username']) && !empty($_SESSION['username'])){
    				-moz-box-shadow:-5px 5px 5px #9D968F; 
    				box-shadow:-5px 5px 5px #9D968F; 
 			}
-		</style>
+		</style> -->
 	</head>
 	<body>
 		<div id="header">
