--- a/UserProfile.html
+++ b/UserProfile.html
@@ -1,9 +1,6 @@
 <?php
 session_start();
-$mysql_host = "mysql5.000webhost.com";
-$mysql_database = "a3940063_roundup";
-$mysql_user = "a3940063_cloudy";
-$mysql_password = "6doubles";
+include 'databaseVars.php';
 if(!(isset($_SESSION['username']) && !empty($_SESSION['username']))){
 	header('Location: Events.html');
 }
